plot voxels matplotlib

--- a/experiments/notebooks/voxels.ipynb
+++ b/experiments/notebooks/voxels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,19 +10,40 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import SimpleITK as sitk\n",
+    "import matplotlib.cm as cm\n",
+    "from matplotlib.colors import Normalize\n",
     "\n",
     "INSTANCES_PATH = Path('/home/joasiee/Documents/instances/synthetic/scans/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_image(path: Path):\n",
     "    image = sitk.ReadImage(str(path.resolve()))\n",
-    "    return image"
+    "    return image\n",
+    "\n",
+    "def plot_voxels(data, y_slice_depth = 15, orientation=(0, -70), cmap_name='gray'):\n",
+    "    ax = plt.figure(figsize=(8,8)).add_subplot(projection='3d')\n",
+    "    sliced_data = np.copy(data)\n",
+    "    sliced_data[:, :y_slice_depth, :] = 0\n",
+    "    \n",
+    "    cmap = cm.get_cmap(cmap_name)\n",
+    "    norm = Normalize(vmin=np.min(sliced_data), vmax=np.max(sliced_data))\n",
+    "\n",
+    "    colors = np.empty(sliced_data.shape, dtype=object)\n",
+    "    colors = np.array(list(map(lambda x: cmap(norm(x)), sliced_data)))\n",
+    "\n",
+    "    ax.voxels(sliced_data, facecolors=colors, edgecolor='k')\n",
+    "    ax.set_xlim3d(2, 28)\n",
+    "    ax.set_ylim3d(5, 28)\n",
+    "    ax.set_zlim3d(2, 28)\n",
+    "    ax.set_box_aspect((np.ptp(ax.get_xlim()), np.ptp(ax.get_ylim()), np.ptp(ax.get_zlim())))\n",
+    "    plt.locator_params(axis='y', nbins=3)\n",
+    "    ax.view_init(*orientation)"
    ]
   },
   {
@@ -30,38 +51,7 @@
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "import plotly.io as pio\n",
-    "pio.renderers.default = \"notebook_connected\"\n",
-    "import numpy as np\n",
-    "\n",
-    "X, Y, Z = np.mgrid[0:30, 0:30, 0:30]\n",
-    "values = sitk.GetArrayFromImage(read_image(INSTANCES_PATH / '01_Fixed.mhd'))\n",
-    "\n",
-    "layout = go.Layout(\n",
-    "    scene=dict(\n",
-    "        xaxis = go.layout.scene.XAxis(showticklabels=False, title=''),\n",
-    "        yaxis = go.layout.scene.YAxis(showticklabels=False, title=''),\n",
-    "        zaxis = go.layout.scene.ZAxis(showticklabels=False, title=''),\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "fig = go.Figure(data=go.Volume(\n",
-    "    x=X.flatten(),\n",
-    "    y=Y.flatten(),\n",
-    "    z=Z.flatten(),\n",
-    "    value=values.flatten(),\n",
-    "    showscale=False,\n",
-    "    isomin=100,\n",
-    "    isomax=200,\n",
-    "    opacity=0.1,\n",
-    "    colorscale='gray',\n",
-    "    surface_count=3,\n",
-    "    ), layout=layout)\n",
-    "\n",
-    "fig.write_image(\"img/synthetic_1_fixed.pdf\", scale=5, width=1000, height=1000)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -92,7 +82,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1f52fffc8ac4531e7d422d5b1d8a72916308024670397ab819a353aa38f4afc6"
+    "hash": "2d2a6e7db805271b0cf909e41ec1d2658bc0cfc8d3a5bab4aa81712494dfdd87"
    }
   }
  },
