--- a/experiments/notebooks/tests.ipynb
+++ b/experiments/notebooks/tests.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "\n",
-    "lm_dir = Path(\"/home/joasiee/Documents/instances/learn/landmarks\")\n",
-    "files = lm_dir.glob('*')\n",
-    "for file in files:\n",
-    "    lms = np.loadtxt(file)\n",
-    "\n",
-    "    with open(file, \"wb\") as file:\n",
-    "        n_points = len(lms)\n",
-    "        file.write(b\"index\\n\")\n",
-    "        file.write(bytes(str(n_points), encoding=\"utf-8\") + b\"\\n\")\n",
-    "        np.savetxt(file, lms, fmt='%f')"
+    "import SimpleITK as sitk\n",
+    "from thesispy.definitions import ROOT_DIR"
    ]
   },
   {
