--- a/experiments/notebooks/voxels.ipynb
+++ b/experiments/notebooks/voxels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,20 @@
     "import SimpleITK as sitk\n",
     "import matplotlib.cm as cm\n",
     "from matplotlib.colors import Normalize\n",
+    "import seaborn as sns\n",
     "\n",
     "INSTANCES_PATH = Path('/home/joasiee/Documents/instances/synthetic/scans/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_image(path: Path):\n",
+    "def get_img_data(path: Path):\n",
     "    image = sitk.ReadImage(str(path.resolve()))\n",
-    "    return image\n",
+    "    return sitk.GetArrayFromImage(image)\n",
     "\n",
     "def plot_voxels(data, y_slice_depth = 15, orientation=(0, -70), cmap_name='gray'):\n",
     "    ax = plt.figure(figsize=(8,8)).add_subplot(projection='3d')\n",
@@ -43,15 +44,18 @@
     "    ax.set_zlim3d(2, 28)\n",
     "    ax.set_box_aspect((np.ptp(ax.get_xlim()), np.ptp(ax.get_ylim()), np.ptp(ax.get_zlim())))\n",
     "    plt.locator_params(axis='y', nbins=3)\n",
-    "    ax.view_init(*orientation)"
+    "    ax.view_init(*orientation)\n",
+    "\n",
+    "def plot_dvf(data, slice=15):\n",
+    "    X, Y = np.indices(data.shape[:2])\n",
+    "    u = data[:, slice, :, 0]\n",
+    "    v = data[:, slice, :, 2]\n",
+    "    colors = np.linalg.norm(data[:, slice, :, [0, 2]], axis=0) # np swaps smallest dim axis to 0\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize =(8, 8))\n",
+    "    ax.quiver(X, Y, u, v, colors, angles='xy', scale_units='xy', cmap=\"Greys\")\n",
+    "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
