bending energy dvf using finite differencing

--- a/experiments/notebooks/voxels.ipynb
+++ b/experiments/notebooks/voxels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
     "import matplotlib.cm as cm\n",
     "from matplotlib.colors import Normalize\n",
     "import seaborn as sns\n",
+    "from thesispy.definitions import ROOT_DIR\n",
     "\n",
     "INSTANCES_PATH = Path('/home/joasiee/Documents/instances/synthetic/scans/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +56,135 @@
     "    fig, ax = plt.subplots(figsize =(8, 8))\n",
     "    ax.quiver(X, Y, u, v, colors, angles='xy', scale_units='xy', cmap=\"Greys\")\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import Parallel, delayed\n",
+    "import numdifftools as nd\n",
+    "\n",
+    "def hessian(dvf_slice, p):\n",
+    "  p = np.array(p, dtype=int)\n",
+    "  try:\n",
+    "    dvf_slice[tuple(p)]\n",
+    "  except IndexError:\n",
+    "    print(f\"Point {p} is out of bounds\")\n",
+    "    return None\n",
+    "\n",
+    "  n = len(p)\n",
+    "  output = np.matrix(np.zeros(n*n))\n",
+    "  output = output.reshape(n,n)\n",
+    "  max_indices = np.array(dvf_slice.shape) - 1\n",
+    "  \n",
+    "  for i in range(n):\n",
+    "    for j in range(n):\n",
+    "      ei = np.zeros(n, dtype=int)\n",
+    "      ei[i] = 1\n",
+    "      ej = np.zeros(n, dtype=int)\n",
+    "      ej[j] = 1\n",
+    "      f1 = dvf_slice[tuple(np.clip(p + ei + ej, 0, max_indices))]\n",
+    "      f2 = dvf_slice[tuple(np.clip(p + ei - ej, 0, max_indices))]\n",
+    "      f3 = dvf_slice[tuple(np.clip(p - ei + ej, 0, max_indices))]\n",
+    "      f4 = dvf_slice[tuple(np.clip(p - ei - ej, 0, max_indices))]\n",
+    "      numdiff = (f1-f2-f3+f4)/4\n",
+    "      output[i,j] = numdiff\n",
+    "  return output\n",
+    "\n",
+    "def get_hessians_numdiff(dvf):\n",
+    "    hessians = []\n",
+    "    for dim in range(len(dvf.shape)-1):\n",
+    "        dvf_slice = dvf[..., dim]\n",
+    "        max_indices = np.array(dvf_slice.shape) - 1\n",
+    "        dvf_mapping = lambda x: dvf_slice[tuple(np.clip(x.astype(int), 0, max_indices))]\n",
+    "        hessian = nd.Hessian(dvf_mapping, step=1)\n",
+    "        hessians.append(hessian)\n",
+    "    return hessians\n",
+    "\n",
+    "def bending_energy(dvf):\n",
+    "  results = Parallel(n_jobs=16)(delayed(bending_energy_point)(dvf, p) for p in np.ndindex(dvf.shape[:-1]))\n",
+    "  return np.sum(results) / np.prod(dvf.shape[:-1])\n",
+    "\n",
+    "def bending_energy_point(dvf, p):\n",
+    "  sum = 0.0\n",
+    "  for dim in range(len(dvf.shape)-1):\n",
+    "    sum += np.square(np.linalg.norm(hessian(dvf[..., dim], p)))\n",
+    "  return sum\n",
+    "\n",
+    "def bending_energy_numdiff(dvf):\n",
+    "  sum = 0.0\n",
+    "  hessians = get_hessians_numdiff(dvf)\n",
+    "  for p in np.ndindex(dvf.shape[:-1]):\n",
+    "    for dim in range(len(dvf.shape)-1):\n",
+    "      sum += np.square(np.linalg.norm(hessians[dim](p)))\n",
+    "  return sum / np.prod(dvf.shape[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005566545035513931"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = get_img_data(ROOT_DIR / \"output\" / \"1662734354_synthetic_1_adaptivestochasticgradientdescent_314898\" / \"out\" / \"deformationField.mhd\")\n",
+    "bending_energy(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00556654503551399"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bending_energy(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-6.77056232e-05,  5.20151480e-05,  5.20151480e-05],\n",
+       "       [ 5.20151480e-05,  4.62580647e-05,  2.28720892e-05],\n",
+       "       [ 5.20151480e-05,  2.28720892e-05,  4.62580647e-05]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hessians = get_hessians_numdiff(data)\n",
+    "hessians[0]([0,0,0])"
    ]
   },
   {
