--- a/experiments/notebooks/tests.ipynb
+++ b/experiments/notebooks/tests.ipynb
@@ -2,15 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import SimpleITK as sitk\n",
-    "from thesispy.definitions import ROOT_DIR"
+    "\n",
+    "grid_size = (5,5,5)\n",
+    "n_points = np.prod(grid_size)\n",
+    "params = np.zeros(np.prod(grid_size)*3)\n",
+    "for i, p in enumerate(np.ndindex(grid_size)):\n",
+    "    params[i] = p[2]\n",
+    "    params[n_points + i] = p[1]\n",
+    "    params[2*n_points + i] = p[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(375,)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -39,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
