--- a/experiments/notebooks/voxels.ipynb
+++ b/experiments/notebooks/voxels.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -18,7 +18,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -86,20 +86,19 @@
                 "            dvf[p] = map_sphere(p_pixel, 5, (15, 15, 15), 8) - p_pixel\n",
                 "\n",
                 "        elif fixed[p] > 0:\n",
-                "            match version:\n",
-                "                case 1:\n",
-                "                    dvf[p] = map_fixed_point_using_spheres(p_pixel, (15,15,15), 8, 10) - p_pixel\n",
-                "                case 2:\n",
-                "                    dvf[p] = map_fixed_point_using_sq(p_pixel, (15,15,15), 8, 10) - p_pixel\n",
-                "                case _:\n",
-                "                    raise Exception(f\"Invalid version number: {version}\")\n",
+                "            if version == 1:\n",
+                "                dvf[p] = map_fixed_point_using_spheres(p_pixel, (15,15,15), 8, 10) - p_pixel\n",
+                "            elif version == 2:\n",
+                "                dvf[p] = map_fixed_point_using_sq(p_pixel, (15,15,15), 8, 10) - p_pixel\n",
+                "            else:\n",
+                "                raise Exception(f\"Invalid version number: {version}\")\n",
                 "        \n",
                 "    return fixed, moving, dvf"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -220,7 +219,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -318,7 +317,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -327,7 +326,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -336,7 +335,7 @@
                             "Text(0.5, 1.0, 'Deformation Vector Field')"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 18,
                     "metadata": {},
                     "output_type": "execute_result"
                 },
@@ -616,7 +615,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.10.6 ('.venv': poetry)",
+            "display_name": "Python 3.9.10 ('.venv': poetry)",
             "language": "python",
             "name": "python3"
         },
@@ -630,12 +629,12 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.6"
+            "version": "3.9.10"
         },
         "orig_nbformat": 4,
         "vscode": {
             "interpreter": {
-                "hash": "1f52fffc8ac4531e7d422d5b1d8a72916308024670397ab819a353aa38f4afc6"
+                "hash": "2d2a6e7db805271b0cf909e41ec1d2658bc0cfc8d3a5bab4aa81712494dfdd87"
             }
         }
     },
