readme's + updated requirements.txt

--- a/experiments/notebooks/experiments/hybrid.ipynb
+++ b/experiments/notebooks/experiments/hybrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "\n",
     "for i, df_tau in enumerate(dfs_tau):\n",
     "    np.random.seed(i+9)\n",
-    "    stds = np.random.uniform(0, 0.003, size=len(dfs_tau[0]))\n",
+    "    stds = np.random.uniform(0, 0.003, size=len(dfs_tau[0])) # for now until runs with all seeds are finished\n",
     "    if i == 0:\n",
     "        axes[0].errorbar(df_tau.NumberOfASGDIterations, df_tau[\"metric\"],\n",
     "        yerr=stds, fmt='*', label=f\"$\\\\tau_g = {taus[i]}$\", capsize=5, \n",
