--- a/experiments/notebooks/experiments/missed_pixels.ipynb
+++ b/experiments/notebooks/experiments/missed_pixels.ipynb
@@ -10303,7 +10303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = get_runs_as_dataset(\"synthetic_1_constrained_selection\")"
+    "ds = get_runs_as_dataset(\"synthetic_1_constrained_selection\")\n",
+    "ds.save()"
    ]
   },
   {
