--- a/experiments/notebooks/experiments/regularization_weight.ipynb
+++ b/experiments/notebooks/experiments/regularization_weight.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from thesispy.experiments.wandb_client import *\n",
     "from thesispy.definitions import *\n",
     "from thesispy.plot_utils import *\n",
-    "from thesispy.elastix_wrapper.wrapper import run\n",
+    "from thesispy.elastix_wrapper.runner import run\n",
     "from thesispy.elastix_wrapper.parameters import Parameters\n",
     "from thesispy.experiments.instance import read_controlpoints, read_transform_params\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
