--- a/experiments/notebooks/experiments/linkage_models.ipynb
+++ b/experiments/notebooks/experiments/linkage_models.ipynb
@@ -33,6 +33,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mean_runtimes = {}\n",
     "std_runtimes = {}\n",
     "\n",
@@ -359,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec 19 2022, 17:35:49) [GCC 12.2.0]"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
